[package]
name = "blackwater"
version = "1.0.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.3", features = ["full"] }
structopt = "0.3.21"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
